Replaced vertx Json with nanojson