@@ -40,6 +40,7 @@ import java.net.URI;
 import java.net.URISyntaxException;
 import java.net.URLConnection;
 import java.net.URLEncoder;
+import java.nio.charset.StandardCharsets;
 import java.time.Instant;
 import java.time.OffsetDateTime;
 import java.time.ZoneOffset;
@@ -186,10 +187,6 @@ public final class Utils {
     // Thank JDA devs! <3
     @Nonnull
     public static String encodeUTF8(@Nonnull final String chars) {
-        try {
-            return URLEncoder.encode(chars, "UTF-8");
-        } catch(final UnsupportedEncodingException e) {
-            throw new AssertionError(e); // thanks JDK 1.4
-        }
+        return URLEncoder.encode(chars, StandardCharsets.UTF_8);
     }
 }
